--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,71 @@
 node_modules/
+node_modules/.bin/acorn
+node_modules/.bin/cleancss
+node_modules/.bin/color-support
+node_modules/.bin/mime
+node_modules/.bin/mkdirp
+node_modules/.bin/node-gyp
+node_modules/.bin/node-which
+node_modules/.bin/nopt
+node_modules/.bin/prebuild-install
+node_modules/.bin/rc
+node_modules/.bin/resolve
+node_modules/.bin/rimraf
+node_modules/.bin/semver
+node_modules/.bin/uglifyjs
+node_modules/acorn/bin/acorn
+node_modules/clean-css/bin/cleancss
+node_modules/color-support/bin.js
+node_modules/is-expression/node_modules/.bin/acorn
+node_modules/is-expression/node_modules/acorn/bin/acorn
+node_modules/mime/cli.js
+node_modules/mkdirp/bin/cmd.js
+node_modules/node-gyp/bin/node-gyp.js
+node_modules/nopt/bin/nopt.js
+node_modules/prebuild-install/bin.js
+node_modules/pug-code-gen/node_modules/.bin/acorn
+node_modules/pug-code-gen/node_modules/acorn-globals/node_modules/.bin/acorn
+node_modules/pug-code-gen/node_modules/acorn-globals/node_modules/acorn/bin/acorn
+node_modules/pug-code-gen/node_modules/acorn/bin/acorn
+node_modules/rc/cli.js
+node_modules/resolve/bin/resolve
+node_modules/rimraf/bin.js
+node_modules/semver/bin/semver.js
+node_modules/sqlite3/build/Release/node_sqlite3.node
+node_modules/uglify-js/bin/uglifyjs
+node_modules/which/bin/node-which
+node_modules/.bin/acorn
+node_modules/.bin/cleancss
+node_modules/.bin/color-support
+node_modules/.bin/mime
+node_modules/.bin/mkdirp
+node_modules/.bin/node-gyp
+node_modules/.bin/node-which
+node_modules/.bin/nopt
+node_modules/.bin/prebuild-install
+node_modules/.bin/rc
+node_modules/.bin/resolve
+node_modules/.bin/rimraf
+node_modules/.bin/semver
+node_modules/.bin/uglifyjs
+node_modules/acorn/bin/acorn
+node_modules/clean-css/bin/cleancss
+node_modules/color-support/bin.js
+node_modules/is-expression/node_modules/.bin/acorn
+node_modules/is-expression/node_modules/acorn/bin/acorn
+node_modules/mime/cli.js
+node_modules/mkdirp/bin/cmd.js
+node_modules/node-gyp/bin/node-gyp.js
+node_modules/nopt/bin/nopt.js
+node_modules/prebuild-install/bin.js
+node_modules/pug-code-gen/node_modules/.bin/acorn
+node_modules/pug-code-gen/node_modules/acorn-globals/node_modules/.bin/acorn
+node_modules/pug-code-gen/node_modules/acorn-globals/node_modules/acorn/bin/acorn
+node_modules/pug-code-gen/node_modules/acorn/bin/acorn
+node_modules/rc/cli.js
+node_modules/resolve/bin/resolve
+node_modules/rimraf/bin.js
+node_modules/semver/bin/semver.js
+node_modules/sqlite3/build/Release/node_sqlite3.node
+node_modules/uglify-js/bin/uglifyjs
+node_modules/which/bin/node-which
